Fixed scrollbar and added box-sizing

--- a/frontend/src/themes/default.css
+++ b/frontend/src/themes/default.css
@@ -3,8 +3,14 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
     font-family: 'Fredoka', sans-serif;
     color: white;
+    scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+    display: none;
 }
 
 body {
@@ -62,4 +68,17 @@ input[type="submit"]:focus,input[type="submit"]:focus.active,button:focus,button
     border: 1px solid rgba(150, 150, 150, 0.5);
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.85);
+}
+
+@keyframes blend-in {
+    0% { 
+        opacity: 0;
+    }
+    100% { 
+        opacity: 1;
+    }
+}
+
+.blend-in {
+    animation: blend-in 1s ease forwards;
 }
